# merck-devops

./: .dockerignore  .env.example  .gitignore  ASSIGNMENT.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  main.py
app/auth/: bearer.py  jwt_handler.py
app/models/: auth.py  data.py
app/routers/: data.py  health.py
infra/: app.py  cdk.json
infra/stacks/: ecs_stack.py
scripts/: initial-deploy.sh
tests/: conftest.py  test_auth.py  test_data.py  test_health.py
